Refactor: replace legacy core implementation with `larapress/core`, clean up helpers, components, and autoload files, add plugin version in config, and update Docker compose and composer.json to use the core package.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ./wp:/var/www/html/
       - ./:/var/www/html/framework/
+      - ./../larapress_core:/var/www/html/core/
   db:
     image: mariadb:latest
     environment:
