--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,7 @@
   "type": "project",
   "license": "MIT",
   "require": {
-    "as247/wp-eloquent": "^2.1",
-    "nesbot/carbon": "^3.3",
-    "rakit/validation": "^1.4",
-    "guzzlehttp/guzzle": "^7.0",
-    "filp/whoops": "^2.15"
+    "larapress/core": "dev-main"
   },
   "authors": [
     {
@@ -17,12 +13,15 @@
   "autoload": {
     "psr-4": {
       "App\\": "App/"
-    },
-    "files": [
-      "App/Core/autoload.php"
-    ]
+    }
   },
-  "require-dev": {
-    "symfony/var-dumper": "^7.0"
+  "repositories": {
+    "larapress_core": {
+      "type": "path",
+      "url": "../core",
+      "options": {
+        "symlink": true
+      }
+    }
   }
 }
